Bug 301053 - Selecting XY plots + power spectra in the wizard results in only one spectrum
Summary: Selecting XY plots + power spectra in the wizard results in only one spectrum
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.4
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-02 13:31 UTC by Nicolas Brisset
Modified: 2012-06-11 19:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2012-06-02 13:31:24 UTC
When importing data with the data wizard and selecting both XY plots + power spectra, only one spectrum is shown. There should be one for each curve. 
It seems they are all computed, but only one plot is created.

Reproducible: Always

Steps to Reproduce:
1. From the usual netCDF sample at http://www.unidata.ucar.edu/software/netcdf/examples/GOTEX.C130_N130AR.LRT.RF06.PNI.nc load the first non-time 4 vectors (ADIFR etc) against time_offset as X
2. Select both "Create XY Plots" and "Create Spectra Plots"
3. Select "XY and spectra in separate new tabs"
4. Finish 
Actual Results:  
The second tab created contains only one plot, however the data wizard shows that all 4 spectra are computed. Only the plots are missing.
Strangely, the generated plot occupies only a small portion of the tab... In fact, if you hit "Cleanup layout" you get the 4 plots so it seems to be only a layout problem

Expected Results:  
All power spectra should be shown, with the same layout options as the XY plots (which is not the case currently if you "Cleanup layout" afterwards.

This used to work, there is a regression there.
Comment 1 Nicolas Brisset 2012-06-02 13:34:33 UTC
This comment is almost another bug report, but I'm too lazy...
When vectors provide their own units, it is kind of sad that they are overriden by the values given in the datawizard for power spectra. There should be an option "Deduce unit from vector".
Comment 2 Netterfield 2012-06-11 15:48:53 UTC
SVN commit 1299898 by netterfield:


Also format the spectrum page from the the data wizard.


 M  +3 -0      datawizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1299898
Comment 3 Nicolas Brisset 2012-06-11 19:32:38 UTC
Well done :-)
I knew it was in DataWizard::finished() but after staring at the source for a few minutes I was still quite confused as to what was wrong. We can't say that this portion of code is very readable...
But at least now it's solved!