BUG: 301053

Also format the spectrum page from the the data wizard.


git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1299898 283d02a7-25f6-0310-bc7c-ecb5cbfe19da